# ManipubalityHRI

./: README.md  env
URDF_Generator/: urdf_gen_base_origin.py  urdf_gen_space.py
rtt-const-stiffness/: CMakeLists.txt
rtt-const-stiffness/include/: ConstStiffness.hpp
rtt-const-stiffness/src/: ConstStiffness.cpp
rtt-fri-cartesian-impedance/: CMakeLists.txt  README.md
rtt-fri-cartesian-impedance/include/: RttFriCartImpedCtrl.hpp  friremote_rt.h  friudp_rt.h
rtt-fri-cartesian-impedance/ops-scripts/: rob.ops
rtt-fri-cartesian-impedance/src/: RttFriCartImpedCtrl.cpp  friremote_rt.cpp  friudp_rt.cpp
rtt-fri-cartesian-pose-manager/: CMakeLists.txt
rtt-fri-cartesian-pose-manager/include/: CartesianPoseManager.hpp  QuinticPolynomial.hpp
rtt-fri-cartesian-pose-manager/ops-scripts/: rob.ops  test.ops
rtt-fri-cartesian-pose-manager/src/: CartesianPoseManager.cpp
rtt-fri-linear-variable-stiffness/: CMakeLists.txt
rtt-fri-linear-variable-stiffness/include/: LinearStiffness.hpp
rtt-fri-linear-variable-stiffness/ops-scripts/: .tb_history  rob.ops
rtt-fri-linear-variable-stiffness/src/: LinearStiffness.cpp
rtt-manip-estimator/: CMakeLists.txt
rtt-manip-estimator-2/: CMakeLists.txt  env
rtt-manip-estimator-2/include/: ManipEstimator.hpp
rtt-manip-estimator-2/ops-scripts/: rob.ops  stiff_calc.ops
rtt-manip-estimator-2/src/: ManipEstimator.cpp
rtt-manip-estimator/include/: ManipEstimator.hpp
rtt-manip-estimator/src/: ManipEstimator.cpp
rtt-manip-to-stiffness/: CMakeLists.txt
rtt-manip-to-stiffness/include/: ManipToStiffness.hpp
rtt-manip-to-stiffness/ops-scripts/: manip_stiff.ops  manip_stiffXYZ.ops  record_manip.ops  stiff.ops
rtt-manip-to-stiffness/src/: ManipToStiffness.cpp
rtt-manip-to-stiffnessXYZ/: CMakeLists.txt
rtt-manip-to-stiffnessXYZ/include/: ManipToStiffness.hpp
rtt-manip-to-stiffnessXYZ/src/: ManipToStiffness.cpp
test_bridge/: CMakeLists.txt  ToDo
test_bridge/src/: CMakeLists.txt.back  test-component.cpp  test-component.hpp
